# PFC_cppMIV

./: BotaoMudarPagina.qml  CMakeLists.txt  CommandController.cpp  CommandController.h  DownloadController.cpp  DownloadController.h  DownloadPage.qml  GeneralToolsController.cpp  GeneralToolsController.h  ListaSinais.js  Main.qml  README.md  ReadingController.cpp  ReadingController.h  ReadingPage.qml  ReportPage.qml  main.cpp  sinais
